--- a/ProyectoPBD/app/views/fixed_rates/index.html.erb
+++ b/ProyectoPBD/app/views/fixed_rates/index.html.erb
@@ -24,7 +24,7 @@
             <th>Origen</th>
             <th>Destino</th>
             <th>Costo</th>
-            <th>Agregar</th>
+            <th>Ver</th>
             <th>Modificar</th>
             <th>Eliminar</th>
           </tr>
