--- a/ProyectoPBD/app/views/fixed_rates/new.html.erb
+++ b/ProyectoPBD/app/views/fixed_rates/new.html.erb
@@ -9,7 +9,7 @@
 
 				<%= render 'form' %>
 
-				<%= link_to 'Volver', fixed_rates_path %>
+				<%= button_to 'Volver', fixed_rates_path, :method=>'get', :class=>'btn btn-default' %>
 		</div>
 	</div>
 </div>
