--- a/ProyectoPBD/app/views/kilometers_prices/index.html.erb
+++ b/ProyectoPBD/app/views/kilometers_prices/index.html.erb
@@ -22,9 +22,9 @@
           <td><%= kilometers_price.ini_val_km %></td>
           <td><%= kilometers_price.fin_val_km %></td>
           <td><%= kilometers_price.estado_val_km %></td>
-          <td><%= link_to 'Ver', kilometers_price %></td>
-          <td><%= link_to 'Editar', edit_kilometers_price_path(kilometers_price) %></td>
-          <td><%= link_to 'Destruir', kilometers_price, method: :delete, data: { confirm: '¿Confirma eliminación?' } %></td>
+          <td><%= button_to 'Ver', kilometers_price, :method=>'get', :class=>'btn btn-info' %></td>
+          <td><%= button_to 'Editar', edit_kilometers_price_path(kilometers_price), :method=>'get', :class=>'btn btn-warning' %></td>
+          <td><%= button_to 'Destruir', kilometers_price, method: :delete, data: { confirm: '¿Confirma eliminación?' }, :method=>'get', :class=>'btn btn-danger' %></td>
         </tr>
       <% end %>
     </tbody>
@@ -32,6 +32,6 @@
 
   <br>
 
-  <%= link_to 'Nuevo', new_kilometers_price_path %>
+  <%= button_to 'Nuevo', new_kilometers_price_path, :method=>'get', :class=>'btn btn-default' %>
 
 <% end %>
