--- a/ProyectoPBD/app/views/fixed_rates/edit.html.erb
+++ b/ProyectoPBD/app/views/fixed_rates/edit.html.erb
@@ -5,12 +5,12 @@
         <div class="row">
             <div class="col-lg-12 ">   
 
-				<h1>Editing fixed_rate</h1>
+				<h1>Editar viajes de costo fijo</h1>
 
 				<%= render 'form' %>
 
-				<%= link_to 'Ver', @fixed_rate %> |
-				<%= link_to 'Volver', fixed_rates_path %>
+				<%= button_to 'Ver', @fixed_rate, :method=>'get', :class=>'btn btn-info' %> |
+				<%= button_to 'Volver', fixed_rates_path, :method=>'get' :class=>'btn btn-default' %>
 
 			</div>
 		</div>
