cambios en vistas
panels a cada index de scaffold y algunos fondos, etc

--- a/ProyectoPBD/app/views/concepts/index.html.erb
+++ b/ProyectoPBD/app/views/concepts/index.html.erb
@@ -1,11 +1,27 @@
 
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
+  <h1>Listado de conceptos</h1>
 
-  <h1>Listing concepts</h1>
+  <br><br><br>
+<div class="panel panel-default">
+      <!-- Default panel contents -->
+      <div class="panel-heading">Lista de conceptos</div>
+      <div class="panel-body">
+        <p class="center"> En esta sección es posible ver, agregar o modificar conceptos.<br>
+        
+        </p>
+      </div>
 
-  <table>
+      <!-- Table -->
+      <table class="table">
+
     <thead>
       <tr>
-        <th>Nom conc</th>
+        <th>Nombre concepto</th>
         <th></th>
         <th></th>
         <th></th>
@@ -28,3 +44,4 @@
 
   <%= link_to 'Nuevo', new_concept_path %>
 
+</div></div></div></div>
