--- a/ProyectoPBD/app/views/external_enterprises/index.html.erb
+++ b/ProyectoPBD/app/views/external_enterprises/index.html.erb
@@ -1,19 +1,35 @@
-<h1>Listing external_enterprises</h1>
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
 
-<table>
+<h1>Listado de empresas externas</h1>
+
+  <div class="panel panel-default">
+      <!-- Default panel contents -->
+      <div class="panel-heading">Lista de empresas externas</div>
+      <div class="panel-body">
+        <p class="center"> En esta sección es posible ver, agregar o modificar las empresas externas que presentan convenio con ActiveCab.<br>
+        
+        </p>
+      </div>
+
+      <!-- Table -->
+      <table class="table">
   <thead>
     <tr>
-      <th>Rut ent</th>
-      <th>Giro emp</th>
-      <th>Nom emp</th>
-      <th>Dir emp</th>
-      <th>Tel1 emp</th>
-      <th>Tel2 emp</th>
-      <th>Email emp</th>
-      <th>Est conv emp</th>
-      <th>Ini conv emp</th>
-      <th>Fin conv emp</th>
-      <th>Descrip conv emp</th>
+      <th>Rut empresa</th>
+      <th>Giro empresa</th>
+      <th>Nombre empresa</th>
+      <th>Dirección empresa</th>
+      <th>Teléfono 1</th>
+      <th>Teléfono 2</th>
+      <th>Email</th>
+      <th>Estado convenio</th>
+      <th>Fecha inicio convenio</th>
+      <th>Fecha fin convenio</th>
+      <th>Descripción convenio</th>
       <th></th>
       <th></th>
       <th></th>
@@ -45,3 +61,4 @@
 <br>
 
 <%= link_to 'Nuevo', new_external_enterprise_path %>
+</div></div></div></div>
