--- a/ProyectoPBD/app/views/owners/index.html.erb
+++ b/ProyectoPBD/app/views/owners/index.html.erb
@@ -1,4 +1,10 @@
-<h1>Listing owners</h1>
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
+
+<h1>Listado de dueños</h1>
 
 <%@owners.each do |n| %>
 
@@ -54,3 +60,4 @@
 <br>
 
 <%= link_to 'Nuevo', new_owner_path %>
+</div></div></div>
