--- a/ProyectoPBD/app/views/state_histories/index.html.erb
+++ b/ProyectoPBD/app/views/state_histories/index.html.erb
@@ -1,10 +1,27 @@
-<h1>Listing state_histories</h1>
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
 
-<table>
+<h1>Listado de historial de estados</h1>
+
+  <div class="panel panel-default">
+      <!-- Default panel contents -->
+      <div class="panel-heading">Lista de historial de estados</div>
+      <div class="panel-body">
+        <p class="center"> En esta sección es posible modificar la lista de historial de estados.<br>
+        
+        </p>
+      </div>
+
+      <!-- Table -->
+      <table class="table">
+
   <thead>
     <tr>
-      <th>Id trav</th>
-      <th>Id stat</th>
+      <th>Id viaje</th>
+      <th>Id estado</th>
       <th></th>
       <th></th>
       <th></th>
@@ -27,3 +44,4 @@
 <br>
 
 <%= link_to 'Nuevo', new_state_history_path %>
+</div></div></div>
