--- a/ProyectoPBD/app/views/states/index.html.erb
+++ b/ProyectoPBD/app/views/states/index.html.erb
@@ -1,9 +1,26 @@
-<h1>Listing states</h1>
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
 
-<table>
+<h1>Lista de estados</h1>
+
+  <div class="panel panel-default">
+      <!-- Default panel contents -->
+      <div class="panel-heading">Lista de alertas de revisión técnica</div>
+      <div class="panel-body">
+        <p class="center"> En esta sección es posible modificar los estados.<br>
+        
+        </p>
+      </div>
+
+      <!-- Table -->
+      <table class="table">
+
   <thead>
     <tr>
-      <th>Nom est</th>
+      <th>Nombre de estado</th>
       <th></th>
       <th></th>
       <th></th>
@@ -25,3 +42,4 @@
 <br>
 
 <%= link_to 'Nuevo', new_state_path %>
+</div></div></div></div>
