--- a/ProyectoPBD/app/views/assigneds/index.html.erb
+++ b/ProyectoPBD/app/views/assigneds/index.html.erb
@@ -1,12 +1,30 @@
-<h1>Listing assigneds</h1>
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
 
-<table>
+<h1>Lista de asignados</h1>
+<hr class="lineaB">
+<br><br><br>
+
+<div class="panel panel-default">
+      <!-- Default panel contents -->
+      <div class="panel-heading">Lista de  asignados</div>
+      
+      <div class="panel-body">
+        <p class="center"> 
+        </p>
+      </div>
+
+      <!-- Table -->
+      <table class="table">
   <thead>
     <tr>
-      <th>Id veh</th>
-      <th>Run driv</th>
-      <th>Ini assigned</th>
-      <th>Fin assigned</th>
+      <th>Id vehículo</th>
+      <th>Rut conductor</th>
+      <th>Inicio</th>
+      <th>Fin</th>
       <th></th>
       <th></th>
       <th></th>
@@ -31,3 +49,4 @@
 <br>
 
 <%= link_to 'Nuevo', new_assigned_path %>
+</div></div></div></div>
