--- a/ProyectoPBD/app/views/bills/index.html.erb
+++ b/ProyectoPBD/app/views/bills/index.html.erb
@@ -1,3 +1,8 @@
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
 <h1>Listing bills</h1>
 
 <table>
@@ -29,3 +34,4 @@
 <br>
 
 <%= link_to 'Nueva', new_bill_path %>
+</div></div></div>
