--- a/ProyectoPBD/app/views/clients/index.html.erb
+++ b/ProyectoPBD/app/views/clients/index.html.erb
@@ -1,14 +1,31 @@
-<h1>Listing clients</h1>
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
+<h1>Listado de clientes</h1>
 
-<table>
+<br><br><br>
+<div class="panel panel-default">
+      <!-- Default panel contents -->
+      <div class="panel-heading">Lista de clientes</div>
+      <div class="panel-body">
+        <p class="center"> En esta sección es posible ver, agregar o modificar clientes registrados en ActiveCab.<br>
+        
+        </p>
+      </div>
+
+      <!-- Table -->
+      <table class="table">
+
   <thead>
     <tr>
-      <th>Run cli</th>
-      <th>Nom cli</th>
-      <th>Apells cli</th>
-      <th>Tel1 cli</th>
-      <th>Tel2 cli</th>
-      <th>Email cli</th>
+      <th>Rut </th>
+      <th>Nombre </th>
+      <th>Apellidoss </th>
+      <th>Teléfono 1 </th>
+      <th>Teléfono 2 </th>
+      <th>Email </th>
       <th></th>
       <th></th>
       <th></th>
@@ -35,3 +52,4 @@
 <br>
 
 <%= link_to 'New Client', new_client_path %>
+</div></div></div></div>
