--- a/ProyectoPBD/app/views/comunnes/index.html.erb
+++ b/ProyectoPBD/app/views/comunnes/index.html.erb
@@ -1,12 +1,29 @@
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
 <% if user_signed_in? and current_user.tipo == 'administrador' %>
 
   <h1>Listing comunnes</h1>
 
-  <table>
+  <br><br><br>
+<div class="panel panel-default">
+      <!-- Default panel contents -->
+      <div class="panel-heading">Lista de comunas</div>
+      <div class="panel-body">
+        <p class="center"> En esta sección es posible ver, agregar o modificar comunas en las que es posible, eventualmente, asignar en un viaje.<br>
+        
+        </p>
+      </div>
+
+      <!-- Table -->
+      <table class="table">
+
     <thead>
       <tr>
-        <th>Nom comun</th>
-        <th>Num comun</th>
+        <th>Nombre comuna</th>
+        <th>Número comuna</th>
         <th></th>
         <th></th>
         <th></th>
@@ -31,3 +48,4 @@
   <%= link_to 'Nuevo', new_comunne_path %>
 
 <% end %>
+</div></div></div></div>
