--- a/ProyectoPBD/app/views/drivers/index.html.erb
+++ b/ProyectoPBD/app/views/drivers/index.html.erb
@@ -1,16 +1,28 @@
 
   <h1>Listing drivers</h1>
 
-  <table>
+<br><br><br>
+<div class="panel panel-default">
+      <!-- Default panel contents -->
+      <div class="panel-heading">Lista de conductores</div>
+      <div class="panel-body">
+        <p class="center"> En esta sección es posible ver, agregar o modificar conductores o choferes de taxis trabajando en ActiveCab.<br>
+        
+        </p>
+      </div>
+
+      <!-- Table -->
+      <table class="table">
+
     <thead>
       <tr>
-        <th>Run driv</th>
-        <th>Nom cond</th>
-        <th>Apells cond</th>
-        <th>Tel1 cond</th>
-        <th>Tel2 cond</th>
-        <th>Email cond</th>
-        <th>Venc licenc cond</th>
+        <th>Rut</th>
+        <th>Nombre</th>
+        <th>Apellidos</th>
+        <th>Teléfono 1/th>
+        <th>Teléfono 2 </th>
+        <th>Email </th>
+        <th>Vencimiento licencencia </th>
         <th></th>
         <th></th>
         <th></th>
@@ -28,7 +40,7 @@
           <td><%= driver.email_cond %></td>
           <td><%= driver.venc_licenc_cond %></td>
           <td><%= button_to 'Ver', driver, :method=>'get', :class=>'btn btn-primary' %></td>
-          <td><%= link_to 'Editar', edit_driver_path(driver) %></td>
+          <td><%= button_to 'Editar', edit_driver_path(driver) %></td>
           <td><%= link_to 'Eliminar', driver, method: :delete, data: { confirm: '¿Confirma eliminación?' } %></td>
         </tr>
       <% end %>
