--- a/ProyectoPBD/app/views/drivers_license_alerts/index.html.erb
+++ b/ProyectoPBD/app/views/drivers_license_alerts/index.html.erb
@@ -1,9 +1,25 @@
-<h1>Listing drivers_license_alerts</h1>
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
 
-<table>
+<h1>Listado de alertas licencia de conducir</h1>
+<br><br><br>
+<div class="panel panel-default">
+      <!-- Default panel contents -->
+      <div class="panel-heading">Lista de alertas licencia de conducir</div>
+      <div class="panel-body">
+        <p class="center"> En esta sección es posible ver, agregar o modificar alertas de licencia de conducir.<br>
+        
+        </p>
+      </div>
+
+      <!-- Table -->
+      <table class="table">
   <thead>
     <tr>
-      <th>Plant alert licenc</th>
+      <th>Alerta licencia conducir</th>
       <th></th>
       <th></th>
       <th></th>
@@ -25,3 +41,4 @@
 <br>
 
 <%= link_to 'Nuevo', new_drivers_license_alert_path %>
+</div></div></div></div>
