--- a/ProyectoPBD/app/views/enterprise_clients/index.html.erb
+++ b/ProyectoPBD/app/views/enterprise_clients/index.html.erb
@@ -1,12 +1,28 @@
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
+
 <% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-  <h1>Listing enterprise_clients</h1>
+  <h1>Listado de clientes asociados a una empresa</h1>
 
-  <table>
+<div class="panel panel-default">
+      <!-- Default panel contents -->
+      <div class="panel-heading">Lista de clientes asociados a una empresa</div>
+      <div class="panel-body">
+        <p class="center"> En esta sección es posible ver, agregar o modificar los clientes que pertenecen a una empresa afiliada con ActiveCab.<br>
+        
+        </p>
+      </div>
+
+      <!-- Table -->
+      <table class="table">
     <thead>
       <tr>
-        <th>Run cli</th>
-        <th>Rut ent</th>
+        <th>Rut cliente</th>
+        <th>Rut empresa</th>
         <th></th>
         <th></th>
         <th></th>
@@ -31,3 +47,5 @@
   <%= link_to 'New Enterprise client', new_enterprise_client_path %>
 
 <% end %>
+
+</div></div></div></div>
