--- a/ProyectoPBD/app/views/kilometers_prices/new.html.erb
+++ b/ProyectoPBD/app/views/kilometers_prices/new.html.erb
@@ -4,6 +4,6 @@
 
 	<%= render 'form' %>
 
-	<%= link_to 'Volver', kilometers_prices_path %>
+	<%= button_to 'Volver', kilometers_prices_path, :method=>'get', :class=>'btn btn-danger' %>
 
 <% end %>
