--- a/ProyectoPBD/app/views/log_sqls/index.html.erb
+++ b/ProyectoPBD/app/views/log_sqls/index.html.erb
@@ -1,6 +1,22 @@
-<h1>Listing log_sqls</h1>
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
 
-<table>
+<h1>Listado de logs de auditoría</h1>
+
+  <div class="panel panel-default">
+      <!-- Default panel contents -->
+      <div class="panel-heading">Lista de logs de auditoría</div>
+      <div class="panel-body">
+        <p class="center"> En esta sección es posible ver y modificar el log de auditoría.<br>
+        
+        </p>
+      </div>
+
+      <!-- Table -->
+      <table class="table">
   <thead>
     <tr>
       <th>Tms log sql</th>
@@ -37,3 +53,4 @@
 <br>
 
 <%= link_to 'Nuevo', new_log_sql_path %>
+</div></div></div></div>
