--- a/ProyectoPBD/app/views/natural_clients/index.html.erb
+++ b/ProyectoPBD/app/views/natural_clients/index.html.erb
@@ -1,16 +1,33 @@
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
+
 <% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-  <h1>Listing natural_clients</h1>
+  <h1>Listado de clientes naturales</h1>
 
-  <table>
-    <thead>
-      <tr>
-        <th>Run cli</th>
-        <th></th>
-        <th></th>
-        <th></th>
-      </tr>
-    </thead>
+   <div class="panel panel-default">
+      <!-- Default panel contents -->
+      <div class="panel-heading">Lista de clientes naturales</div>
+      <div class="panel-body">
+        <p class="center"> En esta sección es posible modificar a los clientes naturales, que representan a los usuarios habituales del sistema.<br>
+        
+        </p>
+      </div>
+
+      <!-- Table -->
+      <table class="table">
+
+      <thead>
+        <tr>
+          <th>Rut cliente</th>
+          <th></th>
+          <th></th>
+          <th></th>
+        </tr>
+      </thead>
 
     <tbody>
       <% @natural_clients.each do |natural_client| %>
@@ -29,3 +46,4 @@
   <%= link_to 'New Natural client', new_natural_client_path %>
 
 <% end %>
+</div></div></div></div>
