--- a/ProyectoPBD/app/views/offer_vehicles/edit.html.erb
+++ b/ProyectoPBD/app/views/offer_vehicles/edit.html.erb
@@ -1,6 +1,14 @@
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
+
 <h1>Editing offer_vehicle</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @offer_vehicle %> |
 <%= link_to 'Back', offer_vehicles_path %>
+
+</div></div></div>
