--- a/ProyectoPBD/app/views/offer_vehicles/index.html.erb
+++ b/ProyectoPBD/app/views/offer_vehicles/index.html.erb
@@ -1,11 +1,27 @@
-<h1>Listing offer_vehicles</h1>
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
 
-<table>
+<h1>Listado de ofertas de vehículo</h1>
+
+  <div class="panel panel-default">
+      <!-- Default panel contents -->
+      <div class="panel-heading">Lista de ofertas de vehículos</div>
+      <div class="panel-body">
+        <p class="center"> En esta sección es posible modificar la oferta que existe por parte de los vehículos.<br>
+        
+        </p>
+      </div>
+
+      <!-- Table -->
+      <table class="table">
   <thead>
     <tr>
-      <th>Id veh</th>
-      <th>Id block</th>
-      <th>Est oferta veh</th>
+      <th>Id vehículo</th>
+      <th>Id bloque</th>
+      <th>Estado oferta vehículo</th>
       <th></th>
       <th></th>
       <th></th>
@@ -29,3 +45,5 @@
 <br>
 
 <%= link_to 'Nuevo', new_offer_vehicle_path %>
+
+</div></div></div></div>
