--- a/ProyectoPBD/app/views/scheduling_blocks/index.html.erb
+++ b/ProyectoPBD/app/views/scheduling_blocks/index.html.erb
@@ -1,10 +1,26 @@
-<h1>Listing scheduling_blocks</h1>
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
 
-<table>
+<h1>Listado de bloques horario</h1>
+
+  <div class="panel panel-default">
+      <!-- Default panel contents -->
+      <div class="panel-heading">Lista de bloques horario</div>
+      <div class="panel-body">
+        <p class="center"> En esta sección es posible modificar los bloques horario que podrán solicitar los operadores para la asignación de viajes a conductores.<br>
+        
+        </p>
+      </div>
+
+      <!-- Table -->
+      <table class="table">
   <thead>
     <tr>
-      <th>Ini bloq</th>
-      <th>Fin bloq</th>
+      <th>Inicio bloque</th>
+      <th>Fin bloque</th>
       <th></th>
       <th></th>
       <th></th>
@@ -27,3 +43,4 @@
 <br>
 
 <%= link_to 'Nuevo', new_scheduling_block_path %>
+</div></div></div></div>
