--- a/ProyectoPBD/app/views/schedulings/index.html.erb
+++ b/ProyectoPBD/app/views/schedulings/index.html.erb
@@ -1,11 +1,28 @@
-<h1>Listing schedulings</h1>
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
 
-<table>
+<h1>Listado de programaciones</h1>
+
+  <div class="panel panel-default">
+      <!-- Default panel contents -->
+      <div class="panel-heading">Lista de programaciones</div>
+      <div class="panel-body">
+        <p class="center"> En esta sección es posible modificar las el listado de programaciones.<br>
+        
+        </p>
+      </div>
+
+      <!-- Table -->
+      <table class="table">
+
   <thead>
     <tr>
-      <th>Id off veh</th>
-      <th>Run driv</th>
-      <th>Run cli</th>
+      <th>Id oferta vehículo</th>
+      <th>Rut conductor</th>
+      <th>Rut cliente</th>
       <th></th>
       <th></th>
       <th></th>
@@ -29,3 +46,4 @@
 <br>
 
 <%= link_to 'New Scheduling', new_scheduling_path %>
+</div></div></div></div>
