--- a/ProyectoPBD/app/views/technical_review_expirations/index.html.erb
+++ b/ProyectoPBD/app/views/technical_review_expirations/index.html.erb
@@ -1,10 +1,27 @@
-<h1>Listing technical_review_expirations</h1>
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
 
-<table>
+<h1>Listado de expiracion de revisión técnica</h1>
+<div class="panel panel-default">
+      <!-- Default panel contents -->
+      <div class="panel-heading">Lista de expiración revisión técnica</div>
+      <div class="panel-body">
+        <p class="center"> En esta sección es posible modificar los datos de las respectivas expiraciones de revisiones técnicas.<br>
+        
+        </p>
+      </div>
+
+      <!-- Table -->
+      <table class="table">
+
+
   <thead>
     <tr>
-      <th>Mes venc rev tec</th>
-      <th>Num venc rev tec</th>
+      <th>Mes vencimiento</th>
+      <th>Número vencimiento</th>
       <th></th>
       <th></th>
       <th></th>
@@ -27,3 +44,4 @@
 <br>
 
 <%= link_to 'Nuevo', new_technical_review_expiration_path %>
+</div></div></div></div>
