--- a/ProyectoPBD/app/views/layouts/application.html.erb
+++ b/ProyectoPBD/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
         <li> <%= link_to "Inicio", :controller => :home, :action => :index %></li>
         <li> <%= link_to "Servicios y tarifas", :controller => :welcome, :action => :tarifas %></li>
         <li> <%= link_to "Quiénes somos", :controller => :welcome, :action => :qs %></li>
-        <li> <%= link_to "Solicita un viaje", :controller => :welcome, :action => :qs %></li>
+        <li> <%= link_to "Solicita un viaje", :controller => :travel_requests, :action => :new %></li>
         <!--<li><a href="welcome/qs"><i class="fa fa-university"></i> Quiénes somos</a></li>-->
       </ul>
       <ul class="nav navbar-nav navbar-right">
