--- a/ProyectoPBD/app/views/comunnes/edit.html.erb
+++ b/ProyectoPBD/app/views/comunnes/edit.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-	<h1>Editing comunne</h1>
+	<h1>Editar comuna</h1>
 
 	<%= render 'form' %>
 
