--- a/ProyectoPBD/app/views/comunnes/index.html.erb
+++ b/ProyectoPBD/app/views/comunnes/index.html.erb
@@ -5,7 +5,7 @@
             <div class="col-lg-12 ">
 <% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-  <h1>Listing comunnes</h1>
+  <h1>Listado de comunas</h1>
 
   <br><br><br>
 <div class="panel panel-default">
