Modificando títulos y nombres de variables
Modificación Parte1

--- a/ProyectoPBD/app/views/state_histories/show.html.erb
+++ b/ProyectoPBD/app/views/state_histories/show.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Id trav:</strong>
+  <strong>Id viaje:</strong>
   <%= @state_history.id_trav %>
 </p>
 
 <p>
-  <strong>Id stat:</strong>
+  <strong>Id estado:</strong>
   <%= @state_history.id_stat %>
 </p>
 
