--- a/ProyectoPBD/app/views/states/show.html.erb
+++ b/ProyectoPBD/app/views/states/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Nom est:</strong>
+  <strong>Nombre estado:</strong>
   <%= @state.nom_est %>
 </p>
 
