--- a/ProyectoPBD/app/views/technical_review_alerts/show.html.erb
+++ b/ProyectoPBD/app/views/technical_review_alerts/show.html.erb
@@ -3,7 +3,7 @@
 	<p id="notice"><%= notice %></p>
 
 	<p>
-	  <strong>Plant alert rev tec:</strong>
+	  <strong>Plantilla Alerta Revisión Técnica:</strong>
 	  <%= @technical_review_alert.plant_alert_rev_tec %>
 	</p>
 
