--- a/ProyectoPBD/app/views/technical_review_expirations/show.html.erb
+++ b/ProyectoPBD/app/views/technical_review_expirations/show.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Mes venc rev tec:</strong>
+  <strong>Mes vencimiento revisión técnica:</strong>
   <%= @technical_review_expiration.mes_venc_rev_tec %>
 </p>
 
 <p>
-  <strong>Num venc rev tec:</strong>
+  <strong>Dígito correspondiente al mes:</strong>
   <%= @technical_review_expiration.num_venc_rev_tec %>
 </p>
 
