--- a/ProyectoPBD/app/views/travel_requests/show.html.erb
+++ b/ProyectoPBD/app/views/travel_requests/show.html.erb
@@ -1,47 +1,47 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Run cli:</strong>
+  <strong>Run cliente:</strong>
   <%= @travel_request.run_cli %>
 </p>
 
 <p>
-  <strong>Dir orig sol:</strong>
+  <strong>Dirección origen:</strong>
   <%= @travel_request.dir_orig_sol %>
 </p>
 
 <p>
-  <strong>Dir dest sol:</strong>
+  <strong>Dirección destino:</strong>
   <%= @travel_request.dir_dest_sol %>
 </p>
 
 <p>
-  <strong>Com orig sol:</strong>
+  <strong>Comuna origen:</strong>
   <%= @travel_request.com_orig_sol %>
 </p>
 
 <p>
-  <strong>Com dest sol:</strong>
+  <strong>Comuna destino:</strong>
   <%= @travel_request.com_dest_sol %>
 </p>
 
 <p>
-  <strong>Cant pasaj sol:</strong>
+  <strong>Cantidad de pasajeros:</strong>
   <%= @travel_request.cant_pasaj_sol %>
 </p>
 
 <p>
-  <strong>Fecha crea sol:</strong>
+  <strong>Fecha creación:</strong>
   <%= @travel_request.fecha_crea_sol %>
 </p>
 
 <p>
-  <strong>Fecha serv sol:</strong>
+  <strong>Fecha que necesita el servicio:</strong>
   <%= @travel_request.fecha_serv_sol %>
 </p>
 
 <p>
-  <strong>Est sol:</strong>
+  <strong>Estado solicitud:</strong>
   <%= @travel_request.est_sol %>
 </p>
 
