--- a/ProyectoPBD/app/views/technical_review_alerts/edit.html.erb
+++ b/ProyectoPBD/app/views/technical_review_alerts/edit.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-	<h1>Editing technical_review_alert</h1>
+	<h1>Editar Alerta Revisión Técnica</h1>
 
 	<%= render 'form' %>
 
