--- a/ProyectoPBD/app/views/travels/new.html.erb
+++ b/ProyectoPBD/app/views/travels/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New travel</h1>
+<h1>Nuevo viaje</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Volver', travels_path, :method => 'get', :class => 'btn btn-default' %>
+<%= button_to 'Volver', travels_path, :method => 'get', :class => 'btn btn-default' %>
