--- a/ProyectoPBD/app/views/vehicles/show.html.erb
+++ b/ProyectoPBD/app/views/vehicles/show.html.erb
@@ -1,34 +1,34 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Run own:</strong>
+  <strong>Run dueño:</strong>
   <%= @vehicle.run_own %>
 </p>
 
 <p>
-  <strong>Pat veh:</strong>
+  <strong>Patente vehículo:</strong>
   <%= @vehicle.pat_veh %>
 </p>
 
 <p>
-  <strong>Mar veh:</strong>
+  <strong>Marca vehículo:</strong>
   <%= @vehicle.mar_veh %>
 </p>
 
 <p>
-  <strong>Model veh:</strong>
+  <strong>Modelo vehículo:</strong>
   <%= @vehicle.model_veh %>
 </p>
 
 <p>
-  <strong>Tipo veh:</strong>
+  <strong>Tipo vehículo:</strong>
   <%= @vehicle.tipo_veh %>
 </p>
 
 <p>
-  <strong>Km sem veh:</strong>
+  <strong>Km semanal vehículo:</strong>
   <%= @vehicle.km_sem_veh %>
 </p>
 
-<%= link_to 'Editar', edit_vehicle_path(@vehicle), :method => 'get', :class => 'btn btn-info' %> |
-<%= link_to 'Volver', vehicles_path, :method => 'get', :class => 'btn btn-default' %>
+<%= button_to 'Editar', edit_vehicle_path(@vehicle), :method => 'get', :class => 'btn btn-info' %> |
+<%= button_to 'Volver', vehicles_path, :method => 'get', :class => 'btn btn-default' %>
