--- a/ProyectoPBD/app/views/roles/index.html.erb
+++ b/ProyectoPBD/app/views/roles/index.html.erb
@@ -1,23 +1,124 @@
 
 <div class="container marg2">
-    <br>
-    <br><br>
+    
     <h1>Asignar Roles</h1>
 <br><br>
         <div class="row">
             <div class="col-lg-12 ">
+              <div class="row">
+                <div class="col-lg-6">
+<!---->
+          <div class="panel panel-primary">
+              <div class="panel-heading">
+                <h3 class="panel-title">Asignar nuevo rol</h3>
+              </div>
+              <div class="panel-body">
+              
 
-<form accept-charset="UTF-8" action="/users" class="edit_user" id="edit_user" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /><input name="_method" type="hidden" value="put" /><input name="authenticity_token" type="hidden" value="mw6Ijh0KIUat17UhKq/AhfjuzkgLJ0vG/VrKBTsrN4E=" /></div>
+                  <%= form_tag :action => 'index' do %>
+                    
+                    <p> Rut de cliente a cambiar su rol:&nbsp; &nbsp; &nbsp;
+                    <%= text_field_tag 'rut', @rut %><br>
+                    <p> Correo de cliente a cambiar su rol:&nbsp;
+                    <%= text_field_tag 'correo', @correo %><br>
+                    <p> Seleccione el nuevo rol del cliente:
+                    <%= select_tag :role, options_for_select([['cliente natural', 'cli_nat'],['operador', 'operador'],['conductor','conductor'], ['administrador', 'administrador']]) %><br><br>
 
-  <div><label for="user_email">Email</label><br />
-  <input autofocus="autofocus" id="user_email" name="user[email]" type="email" value="administrador@admin.com" /></div>
+                    <div class="center">  <%= submit_tag 'Enviar', :class=> 'btn btn-primary' %></div>
 
-  <div><input name="commit" type="submit" value="Update" /></div>
-</form>
+                  <% end %>
+
+                  <% begin %>
+
+                    <% @users.each do |user| %>
+
+                      <% if user.rut == @rut and user.email == @correo%>
+                        
+                        <% user.tipo = @rol %>
+                        <%user.save%>
+
+                      <% end %>
+                                            
+                      
+
+
+                    <% end %> 
+
+                  <% rescue %>
+
+                    <p>No se pudo encontrar al usuario solicitado</p>
+
+                  <% end %>
+                  </div>
+              </div>
+
+<!--fin-->
 
 
 
 
+                </div>
+
+
+                <div class="col-lg-6 ">
+
+
+
+
+                </div>
+             </div>           
+          </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <br><br><br>
+          <div class="panel panel-default">
+                <!-- Default panel contents -->
+                <div class="panel-heading">Lista de clientes</div>
+                <div class="panel-body">
+                  <p class="center"> En esta sección es posible ver, agregar o modificar clientes registrados en ActiveCab.<br>
+                  
+                  </p>
+                </div>
+
+                <!-- Table -->
+                <table class="table">
+
+            <thead>
+              <tr>
+                <th>Rut </th>
+                <th>Email </th>
+                <th>Nombre </th>
+                <th>Apellidos </th> 
+                <th>Tipo </th>
+                <th>Teléfono 1 </th>
+                <th>Teléfono 2 </th>
+                <th></th>
+                <th></th>
+                <th></th>
+              </tr>
+            </thead>
+
+            <tbody>
+
+
+             <% @users.each do |user| %>
+                <tr>
+                  <td><%=user.rut%></td>
+                  <td><%=user.email%></td>
+                  <td><%= user.nombre %></td>
+                  <td><%=user.apellidos%></td>
+                  <td><%= user.tipo %></td>
+                  <td><%=user.telefono1%></td>
+                  <td><%=user.telefono2%></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+
+        </div>  
+
+      </div>
 
 
 
@@ -27,94 +128,8 @@
 
 
 
-<br><br><br>
-<div class="panel panel-default">
-      <!-- Default panel contents -->
-      <div class="panel-heading">Lista de clientes</div>
-      <div class="panel-body">
-        <p class="center"> En esta sección es posible ver, agregar o modificar clientes registrados en ActiveCab.<br>
-        
-        </p>
-      </div>
-
-      <!-- Table -->
-      <table class="table">
-
-  <thead>
-    <tr>
-      <th>Rut </th>
-      <th>Email </th>
-      <th>Nombre </th>
-      <th>Apellidos </th> 
-      <th>Tipo </th>
-      <th>Teléfono 1 </th>
-      <th>Teléfono 2 </th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-
-
-   <% @users.each do |user| %>
-      <tr>
-        <td><%=user.rut%></td>
-        <td><%=user.email%></td>
-        <td><%= user.nombre %></td>
-        <td><%=user.apellidos%></td>
-        <td><%= user.tipo %></td>
-        <td><%=user.telefono1%></td>
-        <td><%=user.telefono2%></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
 	
 
-
-<h1><%= @rut%></h1>
-<h1><%= @correo%></h1>
-<h1><%= @rol%></h1>
-
-
-<%= form_tag :action => 'index' do %>
-	
-	<p> Rut de cliente a cambiar su rol:<br>
-	<%= text_field_tag 'rut', @rut %>
-	<p> Correo de cliente a cambiar su rol:<br>
-	<%= text_field_tag 'correo', @correo %>
-	<p> Seleccione el nuevo rol del cliente:<br>
-	<%= select_tag :role, options_for_select([['cliente natural', 'cli_nat'],['operador', 'operador'],['conductor','conductor'], ['administrador', 'administrador']]) %>
-
-	<%= submit_tag 'Enviar' %>
-
-<% end %>
-
-<% begin %>
-
-	<% @users.each do |user| %>
-		<%=user.rut%>
-		<%=user.email%>
-		<% if user.rut == @rut and user.correo == @correo%>
-			
-			<% user.tipo = "funciona"%>
-
-		<% end %>
-		<br>
-		
-		
-
-
-	<% end %>	
-
-<% rescue %>
-
-	<p>No se pudo encontrar al usuario solicitado</p>
-
-<% end %>
 
 
 
