Modificando títulos y nombres de variables P2
La continuación del commit con similar nombre
Se términa de actualizar nombres de variables y títulos de las vistas.

--- a/ProyectoPBD/app/views/bills/index.html.erb
+++ b/ProyectoPBD/app/views/bills/index.html.erb
@@ -8,9 +8,9 @@
 <table>
   <thead>
     <tr>
-      <th>Rut ent</th>
-      <th>Fecha fact</th>
-      <th>Total fact</th>
+      <th>Rut empresa</th>
+      <th>Fecha factura</th>
+      <th>Total factura</th>
       <th></th>
       <th></th>
       <th></th>
