--- a/ProyectoPBD/app/views/bills/new.html.erb
+++ b/ProyectoPBD/app/views/bills/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New bill</h1>
+<h1>Nueva Factura</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Volver', bills_path %>
+<%= button_to 'Volver', bilss_path, :method=>'get', :class=>'btn btn-default' %>
