--- a/ProyectoPBD/app/views/clients/show.html.erb
+++ b/ProyectoPBD/app/views/clients/show.html.erb
@@ -1,32 +1,32 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Run cli:</strong>
+  <strong>Run cliente:</strong>
   <%= @client.run_cli %>
 </p>
 
 <p>
-  <strong>Nom cli:</strong>
+  <strong>Nombre cliente:</strong>
   <%= @client.nom_cli %>
 </p>
 
 <p>
-  <strong>Apells cli:</strong>
+  <strong>Apellidos cliente:</strong>
   <%= @client.apells_cli %>
 </p>
 
 <p>
-  <strong>Tel1 cli:</strong>
+  <strong>Teléfono 1 cliente:</strong>
   <%= @client.tel1_cli %>
 </p>
 
 <p>
-  <strong>Tel2 cli:</strong>
+  <strong>Teléfono 2 cliente:</strong>
   <%= @client.tel2_cli %>
 </p>
 
 <p>
-  <strong>Email cli:</strong>
+  <strong>Email cliente:</strong>
   <%= @client.email_cli %>
 </p>
 
