--- a/ProyectoPBD/app/views/comunnes/show.html.erb
+++ b/ProyectoPBD/app/views/comunnes/show.html.erb
@@ -3,12 +3,12 @@
 	<p id="notice"><%= notice %></p>
 
 	<p>
-	  <strong>Nom comun:</strong>
+	  <strong>Nombre comuna:</strong>
 	  <%= @comunne.nom_comun %>
 	</p>
 
 	<p>
-	  <strong>Num comun:</strong>
+	  <strong>Número comuna:</strong>
 	  <%= @comunne.num_comun %>
 	</p>
 
