--- a/ProyectoPBD/app/views/concepts/show.html.erb
+++ b/ProyectoPBD/app/views/concepts/show.html.erb
@@ -3,7 +3,7 @@
 	<p id="notice"><%= notice %></p>
 
 	<p>
-	  <strong>Nom conc:</strong>
+	  <strong>Nombre concepto:</strong>
 	  <%= @concept.nom_conc %>
 	</p>
 
