--- a/ProyectoPBD/app/views/drivers/show.html.erb
+++ b/ProyectoPBD/app/views/drivers/show.html.erb
@@ -1,37 +1,37 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Run driv:</strong>
+  <strong>Run conductor:</strong>
   <%= @driver.run_driv %>
 </p>
 
 <p>
-  <strong>Nom cond:</strong>
+  <strong>Nombre conductor:</strong>
   <%= @driver.nom_cond %>
 </p>
 
 <p>
-  <strong>Apells cond:</strong>
+  <strong>Apellidos conductor:</strong>
   <%= @driver.apells_cond %>
 </p>
 
 <p>
-  <strong>Tel1 cond:</strong>
+  <strong>Teléfono 1 conductor:</strong>
   <%= @driver.tel1_cond %>
 </p>
 
 <p>
-  <strong>Tel2 cond:</strong>
+  <strong>Teléfono 2 conductor:</strong>
   <%= @driver.tel2_cond %>
 </p>
 
 <p>
-  <strong>Email cond:</strong>
+  <strong>Email conductor:</strong>
   <%= @driver.email_cond %>
 </p>
 
 <p>
-  <strong>Venc licenc cond:</strong>
+  <strong>Fecha vencimiento licencia conducir:</strong>
   <%= @driver.venc_licenc_cond %>
 </p>
 
