--- a/ProyectoPBD/app/views/drivers_license_alerts/show.html.erb
+++ b/ProyectoPBD/app/views/drivers_license_alerts/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Plant alert licenc:</strong>
+  <strong>Mensaje alerta licencia conducir:</strong>
   <%= @drivers_license_alert.plant_alert_licenc %>
 </p>
 
