--- a/ProyectoPBD/app/views/enterprise_clients/show.html.erb
+++ b/ProyectoPBD/app/views/enterprise_clients/show.html.erb
@@ -3,12 +3,12 @@
 	<p id="notice"><%= notice %></p>
 
 	<p>
-	  <strong>Run cli:</strong>
+	  <strong>Run cliente:</strong>
 	  <%= @enterprise_client.run_cli %>
 	</p>
 
 	<p>
-	  <strong>Rut ent:</strong>
+	  <strong>Rut empresa:</strong>
 	  <%= @enterprise_client.rut_ent %>
 	</p>
 
