--- a/ProyectoPBD/app/views/external_enterprises/show.html.erb
+++ b/ProyectoPBD/app/views/external_enterprises/show.html.erb
@@ -1,57 +1,57 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Rut ent:</strong>
+  <strong>Rut empresa:</strong>
   <%= @external_enterprise.rut_ent %>
 </p>
 
 <p>
-  <strong>Giro emp:</strong>
+  <strong>Giro empresa:</strong>
   <%= @external_enterprise.giro_emp %>
 </p>
 
 <p>
-  <strong>Nom emp:</strong>
+  <strong>Nombre empresa:</strong>
   <%= @external_enterprise.nom_emp %>
 </p>
 
 <p>
-  <strong>Dir emp:</strong>
+  <strong>Dirección empresa:</strong>
   <%= @external_enterprise.dir_emp %>
 </p>
 
 <p>
-  <strong>Tel1 emp:</strong>
+  <strong>Teléfono 1 empresa:</strong>
   <%= @external_enterprise.tel1_emp %>
 </p>
 
 <p>
-  <strong>Tel2 emp:</strong>
+  <strong>Teléfono 2 empresa:</strong>
   <%= @external_enterprise.tel2_emp %>
 </p>
 
 <p>
-  <strong>Email emp:</strong>
+  <strong>Email empresa:</strong>
   <%= @external_enterprise.email_emp %>
 </p>
 
 <p>
-  <strong>Est conv emp:</strong>
+  <strong>Estado convenio empresa:</strong>
   <%= @external_enterprise.est_conv_emp %>
 </p>
 
 <p>
-  <strong>Ini conv emp:</strong>
+  <strong>Fecha inicio convenio:</strong>
   <%= @external_enterprise.ini_conv_emp %>
 </p>
 
 <p>
-  <strong>Fin conv emp:</strong>
+  <strong>Fecha término convenio:</strong>
   <%= @external_enterprise.fin_conv_emp %>
 </p>
 
 <p>
-  <strong>Descrip conv emp:</strong>
+  <strong>Descripción detallada  del convenio:</strong>
   <%= @external_enterprise.descrip_conv_emp %>
 </p>
 
