--- a/ProyectoPBD/app/views/fixed_rates/show.html.erb
+++ b/ProyectoPBD/app/views/fixed_rates/show.html.erb
@@ -7,17 +7,17 @@
 
 	<p id="notice"><%= notice %></p>
 	<p>
-	  <strong>Ori tar:</strong>
+	  <strong>Lugar de origen:</strong>
 	  <%= @fixed_rate.ori_tar %>
 	</p>
 
 	<p>
-	  <strong>Dest tar:</strong>
+	  <strong>Lugar de destino:</strong>
 	  <%= @fixed_rate.dest_tar %>
 	</p>
 
 	<p>
-	  <strong>Costo tar:</strong>
+	  <strong>Costo servicio:</strong>
 	  <%= @fixed_rate.costo_tar %>
 	</p>
 
