--- a/ProyectoPBD/app/views/kilometers_prices/index.html.erb
+++ b/ProyectoPBD/app/views/kilometers_prices/index.html.erb
@@ -6,13 +6,13 @@
 
 <% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-  <h1>Listado de precios por kilometro</h1>
+  <h1>Listado de precios por kilómetro</h1>
 
   <div class="panel panel-default">
       <!-- Default panel contents -->
-      <div class="panel-heading">Lista de precios por kilometro</div>
+      <div class="panel-heading">Lista de precios por kilómetro</div>
       <div class="panel-body">
-        <p class="center"> En esta sección es posible modificar el costo de kilometro.<br>
+        <p class="center"> En esta sección es posible modificar el costo de kilómetro.<br>
         
         </p>
       </div>
@@ -21,9 +21,9 @@
       <table class="table">
     <thead>
       <tr>
-        <th>Valor</th>
-        <th>Fecha inicio valor</th>
-        <th>Fecha término valor</th>
+        <th>Valor kilómetro</th>
+        <th>Fecha inicio vigencia</th>
+        <th>Fecha término vigencia</th>
         <th>Estado valor</th>
         <th></th>
         <th></th>
