--- a/ProyectoPBD/app/views/kilometers_prices/new.html.erb
+++ b/ProyectoPBD/app/views/kilometers_prices/new.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-	<h1>New kilometers_price</h1>
+	<h1>Nuevo Precio por Kilómetro</h1>
 
 	<%= render 'form' %>
 
