--- a/ProyectoPBD/app/views/kilometers_prices/show.html.erb
+++ b/ProyectoPBD/app/views/kilometers_prices/show.html.erb
@@ -3,22 +3,22 @@
 	<p id="notice"><%= notice %></p>
 
 	<p>
-	  <strong>Val km:</strong>
+	  <strong>Valor por kilómetro:</strong>
 	  <%= @kilometers_price.val_km %>
 	</p>
 
 	<p>
-	  <strong>Ini val km:</strong>
+	  <strong>Fecha inicio de vigencia valor:</strong>
 	  <%= @kilometers_price.ini_val_km %>
 	</p>
 
 	<p>
-	  <strong>Fin val km:</strong>
+	  <strong>Fecha término de vigencia valor:</strong>
 	  <%= @kilometers_price.fin_val_km %>
 	</p>
 
 	<p>
-	  <strong>Estado val km:</strong>
+	  <strong>Estado vigencia valor:</strong>
 	  <%= @kilometers_price.estado_val_km %>
 	</p>
 
