--- a/ProyectoPBD/app/views/log_sqls/show.html.erb
+++ b/ProyectoPBD/app/views/log_sqls/show.html.erb
@@ -11,27 +11,27 @@
 </p>
 
 <p>
-  <strong>Operac log sql:</strong>
+  <strong>Operacion log sql:</strong>
   <%= @log_sql.operac_log_sql %>
 </p>
 
 <p>
-  <strong>Usuar log sql:</strong>
+  <strong>Usuario modificador:</strong>
   <%= @log_sql.usuar_log_sql %>
 </p>
 
 <p>
-  <strong>Dat antes log sql:</strong>
+  <strong>Datos antes:</strong>
   <%= @log_sql.dat_antes_log_sql %>
 </p>
 
 <p>
-  <strong>Dat desp log sql:</strong>
+  <strong>Datos después:</strong>
   <%= @log_sql.dat_desp_log_sql %>
 </p>
 
 <p>
-  <strong>Ope det log sql:</strong>
+  <strong>Operación detallada:</strong>
   <%= @log_sql.ope_det_log_sql %>
 </p>
 
