--- a/ProyectoPBD/app/views/natural_clients/show.html.erb
+++ b/ProyectoPBD/app/views/natural_clients/show.html.erb
@@ -3,7 +3,7 @@
 	<p id="notice"><%= notice %></p>
 
 	<p>
-	  <strong>Run cli:</strong>
+	  <strong>Run cliente:</strong>
 	  <%= @natural_client.run_cli %>
 	</p>
 
