--- a/ProyectoPBD/app/views/offer_vehicles/show.html.erb
+++ b/ProyectoPBD/app/views/offer_vehicles/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Id veh:</strong>
+  <strong>Id vehículo:</strong>
   <%= @offer_vehicle.id_veh %>
 </p>
 
@@ -11,7 +11,7 @@
 </p>
 
 <p>
-  <strong>Est oferta veh:</strong>
+  <strong>Estado oferta vehículo:</strong>
   <%= @offer_vehicle.est_oferta_veh %>
 </p>
 
