--- a/ProyectoPBD/app/views/owner_commissions/index.html.erb
+++ b/ProyectoPBD/app/views/owner_commissions/index.html.erb
@@ -12,7 +12,7 @@
       <!-- Default panel contents -->
       <div class="panel-heading">Lista de comisiones</div>
       <div class="panel-body">
-        <p class="center"> En esta sección es posible modificar la comisión que recibirán los dueños, la ganancia que estos tendrán como retribución al entregar su(s) vehículo(s) como prestamo a ActiveCab.<br>
+        <p class="center"> En esta sección es posible modificar la comisión que recibirán los dueños, la ganancia que estos tendrán como retribución al entregar su(s) vehículo(s) como prestamo a ActiveCab<br>
         
         </p>
       </div>
