--- a/ProyectoPBD/app/views/owner_commissions/show.html.erb
+++ b/ProyectoPBD/app/views/owner_commissions/show.html.erb
@@ -3,17 +3,17 @@
 	<p id="notice"><%= notice %></p>
 
 	<p>
-	  <strong>Porcent comi prop:</strong>
+	  <strong>Porcentaje comisión propietario vehículo:</strong>
 	  <%= @owner_commission.porcent_comi_prop %>
 	</p>
 
 	<p>
-	  <strong>Ini comi prop:</strong>
+	  <strong>Fecha inicio comisión propietario:</strong>
 	  <%= @owner_commission.ini_comi_prop %>
 	</p>
 
 	<p>
-	  <strong>Fin comi prop:</strong>
+	  <strong>Fecha finalización comisión propietario:</strong>
 	  <%= @owner_commission.fin_comi_prop %>
 	</p>
 
