--- a/ProyectoPBD/app/views/scheduling_blocks/index.html.erb
+++ b/ProyectoPBD/app/views/scheduling_blocks/index.html.erb
@@ -10,7 +10,7 @@
       <!-- Default panel contents -->
       <div class="panel-heading">Lista de bloques horario</div>
       <div class="panel-body">
-        <p class="center"> En esta sección es posible modificar los bloques horario que podrán solicitar los operadores para la asignación de viajes a conductores.<br>
+        <p class="center"> En esta sección es posible modificar los bloques horario que podrán solicitar los operadores para la asignación de viajes a conductores<br>
         
         </p>
       </div>
