--- a/ProyectoPBD/app/views/scheduling_blocks/show.html.erb
+++ b/ProyectoPBD/app/views/scheduling_blocks/show.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Ini bloq:</strong>
+  <strong>Inicio bloque:</strong>
   <%= @scheduling_block.ini_bloq %>
 </p>
 
 <p>
-  <strong>Fin bloq:</strong>
+  <strong>Fin bloque:</strong>
   <%= @scheduling_block.fin_bloq %>
 </p>
 
