--- a/ProyectoPBD/app/views/schedulings/index.html.erb
+++ b/ProyectoPBD/app/views/schedulings/index.html.erb
@@ -4,13 +4,13 @@
         <div class="row">
             <div class="col-lg-12 ">
 
-<h1>Listado de programaciones</h1>
+<h1>Listado de agendamiento</h1>
 
   <div class="panel panel-default">
       <!-- Default panel contents -->
-      <div class="panel-heading">Lista de programaciones</div>
+      <div class="panel-heading">Lista de agendamiento</div>
       <div class="panel-body">
-        <p class="center"> En esta sección es posible modificar las el listado de programaciones.<br>
+        <p class="center"> En esta sección es posible modificar las el listado de agendamiento<br>
         
         </p>
       </div>
