--- a/ProyectoPBD/app/views/schedulings/show.html.erb
+++ b/ProyectoPBD/app/views/schedulings/show.html.erb
@@ -1,17 +1,17 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Id off veh:</strong>
+  <strong>Id oferta vehículo:</strong>
   <%= @scheduling.id_off_veh %>
 </p>
 
 <p>
-  <strong>Run driv:</strong>
+  <strong>Run conductor:</strong>
   <%= @scheduling.run_driv %>
 </p>
 
 <p>
-  <strong>Run cli:</strong>
+  <strong>Run cliente:</strong>
   <%= @scheduling.run_cli %>
 </p>
 
