--- a/ProyectoPBD/app/views/base_prices/show.html.erb
+++ b/ProyectoPBD/app/views/base_prices/show.html.erb
@@ -3,26 +3,26 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Val base:</strong>
+  <strong>Valor base:</strong>
   <%= @base_price.val_base %>
 </p>
 
 <p>
-  <strong>Ini val base:</strong>
+  <strong>Fecha inicio valor base:</strong>
   <%= @base_price.ini_val_base %>
 </p>
 
 <p>
-  <strong>Fin val base:</strong>
+  <strong>Fecha término valor base:</strong>
   <%= @base_price.fin_val_base %>
 </p>
 
 <p>
-  <strong>Estado val base:</strong>
+  <strong>Estado valor base:</strong>
   <%= @base_price.estado_val_base %>
 </p>
 
-<%= button_to 'Editar', edit_base_price_path(@base_price), :method=>'get', :class=>'btn btn-warning' %> |
+<%= button_to 'Editar', edit_base_price_path(@base_price), :method=>'get', :class=>'btn btn-warning' %> 
 <%= button_to 'Volver', base_prices_path, :method=>'get', :class=>'btn btn-default' %>
 
 
