--- a/ProyectoPBD/app/views/enterprise_clients/new.html.erb
+++ b/ProyectoPBD/app/views/enterprise_clients/new.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-	<h1>New enterprise_client</h1>
+	<h1>Nuevo Cliente Empresa</h1>
 
 	<%= render 'form' %>
 
