--- a/ProyectoPBD/app/views/fixed_rates/new.html.erb
+++ b/ProyectoPBD/app/views/fixed_rates/new.html.erb
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-lg-12 ">   
 
-				<h1>New fixed_rate</h1>
+				<h1>Nuevo Costo Fijo</h1>
 
 				<%= render 'form' %>
 
