--- a/ProyectoPBD/app/views/kilometers_prices/edit.html.erb
+++ b/ProyectoPBD/app/views/kilometers_prices/edit.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-<h1>Editing kilometers_price</h1>
+<h1>Editar Precio por Kilómetro</h1>
 
 <%= render 'form' %>
 
