--- a/ProyectoPBD/app/views/natural_clients/edit.html.erb
+++ b/ProyectoPBD/app/views/natural_clients/edit.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-	<h1>Editing natural_client</h1>
+	<h1>Editar Cliente Natural</h1>
 
 	<%= render 'form' %>
 
