--- a/ProyectoPBD/app/views/offer_vehicles/edit.html.erb
+++ b/ProyectoPBD/app/views/offer_vehicles/edit.html.erb
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-lg-12 ">
 
-<h1>Editing offer_vehicle</h1>
+<h1>Editar Oferta Vehículo</h1>
 
 <%= render 'form' %>
 
