--- a/ProyectoPBD/app/views/owner_commissions/edit.html.erb
+++ b/ProyectoPBD/app/views/owner_commissions/edit.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-	<h1>Editing owner_commission</h1>
+	<h1>Editar Comisión de dueños de vehículos</h1>
 
 	<%= render 'form' %>
 
